[package]
name = "pqx"
version = "0.2.0"
edition = "2021"
authors = ["DorianCoding"]
license = "MIT OR Apache-2.0"
keywords = ["cryptography","pqc_kyber","x25519","quantum"]
categories = ["authentication","cryptography"]
description = "Enable keys transfer using quantum-resistant Kyber and X25519"
repository = "https://github.com/DorianCoding/PQX"
rust-version = "1.73"
[dependencies]
rand = "0.8.5"
safe_pqc_kyber = "0.6.3"
sha2 = "0.10.8"
x25519-dalek = "2.0.1"
zeroize = { version = "1.8.1", features = ["derive"] }
hex = { version = "0.4.3", optional = true }
tempfile = { version = "3.10.1", optional = true }
[dev-dependencies]
hex = "0.4.3"
[lints.rust]
unsafe_code = "warn"
[badges]
maintenance = {status = "passively-maintained" }
[features]
default = ["to_string", "keystore"]
to_string =  ["dep:hex"]
keystore = ["dep:tempfile"]
